--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -2,7 +2,7 @@
 <html>
     
 <head>
-	<title>Register as Restaurant</title>
+	<title>Register As Restaurant</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
@@ -70,13 +70,13 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 style="color:black;"id="form-title">Register as Restaurant!</h3>
+					<h3 style="color:black;"id="form-title">Register As Restaurant!</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
 					<form method="POST" action="">
 						{% csrf_token %}
-						<div class="input-group mb-3">
+						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
@@ -88,7 +88,7 @@
 							</div>
 							{{form.email}}
 						</div>
-						<div class="input-group mb-3">
+						<div class="input-group mb-2">
 							<div class="input-group-append">
 								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
