--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
+	
 	<style>
 		body,
 		html {
@@ -78,19 +79,19 @@
 						{% csrf_token %}
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 							{{form.name_of_restaurant}}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 							{{form.email}}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
 							</div>
 							{{form.username}}
 						</div>
@@ -116,7 +117,7 @@
 					</form>
 				</div>
 
-				{{form.errors}}
+				
 				
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
@@ -126,14 +127,15 @@
 			</div>
 		</div>
 	</div>
+	{{form.errors}}
 	<script>
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Restaurant..';
-		form_fields[2].placeholder='Email..';
-		form_fields[3].placeholder='Enter username...';
-		form_fields[4].placeholder='Enter password...';
+		form_fields[1].placeholder='Name Of Restaurant...';
+		form_fields[2].placeholder='Email...';
+		form_fields[3].placeholder='Enter Username...';
+		form_fields[4].placeholder='Enter Password...';
 		form_fields[5].placeholder='Reenter Password...';
 
 
