--- a/food_redistribution/accounts/templates/accounts/login.html
+++ b/food_redistribution/accounts/templates/accounts/login.html
@@ -5,14 +5,17 @@
 	<title>Login</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	
+	
 	<style>
+	h3 {text-align: center;}
 		body,
 		html {
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #945e1e !important;
+			background: #232323 !important;
 		}
 		.user_card {
 			width: 350px;
@@ -42,7 +45,7 @@
 
 		.login_btn {
 			width: 100%;
-			background: #945e1e !important;
+			background: #232323 !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -53,7 +56,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #945e1e !important;
+			background: #232323 !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -80,7 +83,7 @@
 				<div class="d-flex justify-content-center">
 
 
-					<h3 id="form-title">Login</h3>
+					<h3 style="font-family:Optima;font-size:35px;"><id="form-title"> Log In</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 					<form method="POST" action="">
@@ -114,7 +117,7 @@
 		
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
+						Don't Have An Account? <a href="{% url 'register' %}" class="ml-2">Register</a>
 					</div>
 			
 				</div>
