--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -5,15 +5,17 @@
 	<title>Register As Restaurant</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	
 	
 	<style>
+	h3 {text-align: center;}
 		body,
 		html {
 			margin: 0;
 			padding: 0;
 			height: 100%;
-			background: #945e1e !important;
+			background: #232323 !important;
 		}
 		.user_card {
 			width: 350px;
@@ -41,7 +43,7 @@
 		}
 		.login_btn {
 			width: 100%;
-			background: #945e1e !important;
+			background: #232323 !important;
 			color: white !important;
 		}
 		.login_btn:focus {
@@ -52,7 +54,7 @@
 			padding: 0 2rem;
 		}
 		.input-group-text {
-			background: #945e1e !important;
+			background: #232323 !important;
 			color: white !important;
 			border: 0 !important;
 			border-radius: 0.25rem 0 0 0.25rem !important;
@@ -71,7 +73,7 @@
 		<div class="d-flex justify-content-center h-100">
 			<div class="user_card">
 				<div class="d-flex justify-content-center">
-					<h3 style="color:black;"id="form-title">Register As Restaurant!</h3>
+					<h3 style="color:black;font-family:Optima;font-size:35px;"id="form-title">Restaurant Registration</h3>
 				</div>
 				<div class="d-flex justify-content-center form_container">
 
@@ -79,19 +81,19 @@
 						{% csrf_token %}
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
 							{{form.name_of_restaurant}}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
 							</div>
 							{{form.email}}
 						</div>
 						<div class="input-group mb-2">
 							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
 							</div>
 							{{form.username}}
 						</div>
@@ -121,7 +123,7 @@
 				
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Existing Account? <a href="{% url 'login' %}" class="ml-2">Login</a>
+						Already Registered? <a href="{% url 'login' %}" class="ml-2">Log In</a>
 					</div>
 				</div>
 			</div>
@@ -132,11 +134,11 @@
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Name Of Restaurant...';
+		form_fields[1].placeholder='Restaurant Name...';
 		form_fields[2].placeholder='Email...';
-		form_fields[3].placeholder='Enter Username...';
-		form_fields[4].placeholder='Enter Password...';
-		form_fields[5].placeholder='Reenter Password...';
+		form_fields[3].placeholder='Username...';
+		form_fields[4].placeholder='Password...';
+		form_fields[5].placeholder='Confirm Password...';
 
 
 		for (var field in form_fields){	
