--- a/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
+++ b/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
 	<title>Register As Food Redistributor</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -119,25 +119,25 @@
 					</form>
 				</div>
 
-				
+
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Existing Account? <a href="{% url 'login' %}" class="ml-2">Log In</a>
+						Existing Account? <a href="{% url 'login2' %}" class="ml-2">Log In</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	{{form.errors}}
+
 	<script>
 
 		//Query All input fields
 		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Company Name...';
-		form_fields[2].placeholder='Email...';
-		form_fields[3].placeholder='Username...';
-		form_fields[4].placeholder='Password...';
-		form_fields[5].placeholder='Confirm Password...';
+		form_fields[1].placeholder='Company Name';
+		form_fields[2].placeholder='Email';
+		form_fields[3].placeholder='Username';
+		form_fields[4].placeholder='Password';
+		form_fields[5].placeholder='Confirm Password';
 
 
 		for (var field in form_fields){	
