added reset password link to login pages

--- a/food_redistribution/accounts/templates/accounts/restuarantlogin.html
+++ b/food_redistribution/accounts/templates/accounts/restuarantlogin.html
@@ -119,7 +119,12 @@
 					<div class="d-flex justify-content-center links">
 						Don't Have An Account? <a href="{% url 'register' %}" class="ml-2">Register</a>
 					</div>
+				</div>
 
+				<div class="mt-4">
+					<div class="d-flex justify-content-center links">
+						Forgot your Password? <a href="{% url 'reset_password' %}" class="ml-2">Click here to reset!</a>
+					</div>
 				</div>
 			</div>
 		</div>
