--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -1,71 +1,13 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>
 	<title>Register As Restaurant</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-	
-	
-	<style>
-	h3 {text-align: center;}
-		body,
-		html {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			background: #232323 !important;
-		}
-		.user_card {
-			width: 350px;
-			margin-top: auto;
-			margin-bottom: auto;
-			background: #fdfefe;
-			position: relative;
-			display: flex;
-			justify-content: center;
-			flex-direction: column;
-			padding: 10px;
-			box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			-moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-			border-radius: 5px;
-
-		}
-
-		.form_container {
-			margin-top: 25px;
-		}
-
-		#form-title{
-			color: #fff;
-		}
-		.login_btn {
-			width: 100%;
-			background: #232323 !important;
-			color: white !important;
-		}
-		.login_btn:focus {
-			box-shadow: none !important;
-			outline: 0px !important;
-		}
-		.login_container {
-			padding: 0 2rem;
-		}
-		.input-group-text {
-			background: #232323 !important;
-			color: white !important;
-			border: 0 !important;
-			border-radius: 0.25rem 0 0 0.25rem !important;
-		}
-		.input_user,
-		.input_pass:focus {
-			box-shadow: none !important;
-			outline: 0px !important;
-		}
-
-	</style>
+	<link rel="stylesheet" href="../css/all_pages.css">
+	<script src="../js/restaurant-register.js"></script>
 
 </head>
 <body>
@@ -119,8 +61,8 @@
 					</form>
 				</div>
 
-				
-				
+
+
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
 						Already Registered? <a href="{% url 'login' %}" class="ml-2">Log In</a>
@@ -130,20 +72,6 @@
 		</div>
 	</div>
 	{{form.errors}}
-	<script>
 
-		//Query All input fields
-		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='Restaurant Name...';
-		form_fields[2].placeholder='Email...';
-		form_fields[3].placeholder='Username...';
-		form_fields[4].placeholder='Password...';
-		form_fields[5].placeholder='Confirm Password...';
-
-
-		for (var field in form_fields){	
-			form_fields[field].className += ' form-control'
-		}
-	</script>
 </body>
 </html>
