--- a/food_redistribution/accounts/templates/accounts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/navbar.html
@@ -10,7 +10,7 @@
 </style>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
- 
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -18,6 +18,9 @@
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       </li>
     </ul>
   </div>
