--- a/food_redistribution/accounts/templates/css/all_pages.css
+++ b/food_redistribution/accounts/templates/css/all_pages.css
@@ -1,4 +1,3 @@
-
 h3 {text-align: center;}
   body,
   html {
@@ -6,6 +5,7 @@ h3 {text-align: center;}
     padding: 0;
     height: 100%;
     background: #232323 !important;
+    overflow-x: hidden
   }
   .user_card {
     width: 350px;
@@ -63,3 +63,14 @@ h3 {text-align: center;}
     padding: 10px;
     margin-top: 10px;
   }
+
+.profile-head {
+    transform: translateY(5rem)
+}
+
+.cover {
+    background-image: '../templates/images/oat-appleseed-KHz_awh4GLc-unsplash.jpg';
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat
+}
