--- a/food_redistribution/accounts/templates/css/all_pages.css
+++ b/food_redistribution/accounts/templates/css/all_pages.css
@@ -1,76 +1,80 @@
-h3 {text-align: center;}
-  body,
-  html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    background: #232323 !important;
-    overflow-x: hidden
-  }
-  .user_card {
-    width: 350px;
-    margin-top: auto;
-    margin-bottom: auto;
-    background: #fdfefe;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
+h3 {
+  text-align: center;
+  font-family: Optima;
+  font-size:35px;
+}
+body,
+html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background: #232323 !important;
+  overflow-x: hidden
+}
+.user_card {
+  width: 350px;
+  margin-top: auto;
+  margin-bottom: auto;
+  background: #fdfefe;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
 
-  }
+}
 
-  .form_container {
-    margin-top: 25px;
-  }
+.form_container {
+  margin-top: 25px;
+}
 
-  #form-title{
-    color: #17202a;
+#form-title{
+  color: #17202a;
 
-  }
+}
 
-  .login_btn {
-    width: 100%;
-    background: #232323 !important;
-    color: white !important;
-  }
-  .login_btn:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-  }
-  .login_container {
-    padding: 0 2rem;
-  }
-  .input-group-text {
-    background: #232323 !important;
-    color: white !important;
-    border: 0 !important;
-    border-radius: 0.25rem 0 0 0.25rem !important;
-  }
-  .input_user,
-  .input_pass:focus {
-    box-shadow: none !important;
-    outline: 0px !important;
-  }
+.login_btn {
+  width: 100%;
+  background: #232323 !important;
+  color: white !important;
+}
+.login_btn:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
+.login_container {
+  padding: 0 2rem;
+}
+.input-group-text {
+  background: #232323 !important;
+  color: white !important;
+  border: 0 !important;
+  border-radius: 0.25rem 0 0 0.25rem !important;
+}
+.input_user,
+.input_pass:focus {
+  box-shadow: none !important;
+  outline: 0px !important;
+}
 
-  #messages{
-    background-color: grey;
-    color: #fff;
-    padding: 10px;
-    margin-top: 10px;
-  }
+#messages{
+  background-color: grey;
+  color: #fff;
+  padding: 10px;
+  margin-top: 10px;
+}
 
 .profile-head {
-    transform: translateY(5rem)
+  transform: translateY(5rem)
 }
 
 .cover {
-    background-image: '../templates/images/oat-appleseed-KHz_awh4GLc-unsplash.jpg';
-    background-color: black;
-    background-size: cover;
-    background-repeat: no-repeat
+  background-image: '../templates/images/oat-appleseed-KHz_awh4GLc-unsplash.jpg';
+  background-color: black;
+  background-size: cover;
+  background-repeat: no-repeat
 }
