transferred css and js files to static folder

--- a/food_redistribution/accounts/static/accounts/css/all_pages.css
+++ b/food_redistribution/accounts/static/accounts/css/all_pages.css
@@ -4,7 +4,8 @@ h3 {text-align: center;}
     margin: 0;
     padding: 0;
     height: 100%;
-    background: #232323 !important;
+    /* background: #232323 !important; */
+    background: white !important;
     overflow-x: hidden
   }
   .user_card {
