--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -6,9 +7,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/all_pages.css">
-	<script src="/js/restaurant-register.js"></script>
-
+	<link rel="stylesheet" href="{% static 'accounts/css/all_pages.css' %}" />
+	<script src="{% static 'accounts/js/restaurant-register.js' %}"></script>
+	
 </head>
 <body>
 	<div class="container h-100">
