--- a/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
+++ b/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
@@ -8,7 +8,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	<link rel="stylesheet" href="{% static 'accounts/css/all_pages.css' %}" />
-	<script src="{% static 'accounts/js/food-red-register.js' %}"></script>
+	<!-- <script src="{% static 'accounts/js/food-red-register.js' %}"></script> -->
 	
 </head>
 <body>
@@ -84,6 +84,8 @@
 		</div>
 	</div>
 	{{form.errors}}
+
+	<script src="{% static 'accounts/js/food-red-register.js' %}"></script>
 
 </body>
 </html>
