--- a/food_redistribution/accounts/templates/accounts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/navbar.html
@@ -22,6 +22,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'posts' %}">View posts</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'add-post' %}">Add a post</a>
+      </li>
     </ul>
   </div>
 
