--- a/food_redistribution/accounts/templates/accounts/blogposts/blogposts.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/blogposts.html
@@ -4,7 +4,7 @@
 <ul>
     {% for post in object_list %}
 
-    <li> <a href="{% url 'blog-details' post.pk %}"> {{post.title}}</a> - {{post.author}}<br/>
+    <li> <a href="{% url 'blog-details' post.pk %}"> {{post.title}}</a> - {{post.author}} - <small><a href = "{% url 'update_post' post.pk %}">Edit</a></small> <br/> 
     </li>
     {% endfor %} 
 
