Delete post function/ reordered post from newest to oldest

--- a/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
@@ -1,5 +1,8 @@
 <h1>{{ post.title }}</h1>
-<small> By:{{post.author}}</small><br/>
+<small> By:{{post.author}}
+-   <a href = "{% url 'update_post' post.pk %}">(Edit)</a>
+    <a href = "{% url 'delete_post' post.pk %}">(Delete)</a>
+</small><br/>
 <hr>
 <br/>
 {{post.body}}
