--- a/food_redistribution/accounts/templates/accounts/navbar.html
+++ b/food_redistribution/accounts/templates/accounts/navbar.html
@@ -26,6 +26,9 @@
         <a class="nav-link" href="{% url 'posts' %}">View posts</a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" href="{% url 'cal:calendar' %}">View Calendar</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" href="{% url 'add-post' %}">Add a post</a>
       </li>
     </ul>
