--- a/food_redistribution/cal/templates/cal/event.html
+++ b/food_redistribution/cal/templates/cal/event.html
@@ -29,6 +29,7 @@ Event
   <table class="form form-table">
     {{ form }}
     <tr><td colspan="2"><button type="submit" class="btn btn-info right"> Submit </button></td></tr>
+    <a href = "{% url 'delete_event' event.pk %}">(Delete)</a>
   </table>
 </form>
 {% endblock %}
