--- a/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
@@ -1,3 +1,5 @@
+{% if user.is_authenticated %}
+
 <h1>{{ post.title }}</h1>
 <small> By:{{post.author}}
 -   <a href = "{% url 'update_post' post.pk %}">(Edit)</a>
@@ -9,3 +11,8 @@
 
 <br/><br/>
 <a href="{% url 'posts' %}">Go Back</a>
+{% else %}
+
+    Please login to access this page!
+{% endif %}
+{% endblock %}
