--- a/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
@@ -1,12 +1,17 @@
 {% block content %}
-<h1> Edit a post here...</h1>
+{% if user.is_authenticated %}
+    <h1> Edit a post here...</h1>
 
-<form method = "POST">
-    {% csrf_token %}
-    {{ form.as_p}}
-    <button> Update!</button>
+    <form method = "POST">
+        {% csrf_token %}
+        {{ form.as_p}}
+        <button> Update!</button>
 
 
-</form>
+    </form>
+{% else %}
+
+    Please login to access this page!
+{% endif %}
 
 {% endblock %}
