--- a/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/update_post.html
@@ -1,14 +1,18 @@
 {% block content %}
 {% if user.is_authenticated %}
-    <h1> Edit a post here...</h1>
+    {% if user.id == post.author.id %}
+        <h1> Edit a post here...</h1>
 
-    <form method = "POST">
-        {% csrf_token %}
-        {{ form.as_p}}
-        <button> Update!</button>
+        <form method = "POST">
+            {% csrf_token %}
+            {{ form.as_p}}
+            <button> Update!</button>
 
 
-    </form>
+        </form>
+        {% else %}
+            Only the author can edit this post!
+        {% endif %}
 {% else %}
 
     Please login to access this page!
