--- a/food_redistribution/cal/templates/cal/calendar.html
+++ b/food_redistribution/cal/templates/cal/calendar.html
@@ -6,9 +6,9 @@ Calendar
 
 {% block content %}
 <div class="clearfix">
-	<a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ prev_month }}"> Previous Month </a>
-	<a class="btn btn-info right" href="{% url 'cal:calendar' %}?{{ next_month }}"> Next Month </a>
-	<a class="btn btn-info right" href="{% url 'cal:event_new' %}"> New Event </a>
+	<a class="btn btn-info left" href="{% url 'cal:calendar' %}?{{ prev_month }}"> << </a>
+	<a class="btn btn-info right" href="{% url 'cal:calendar' %}?{{ next_month }}"> >> </a>
+	<a class="btn btn-info right" href="{% url 'cal:event_new' %}"> + </a>
 </div>
 
 {{ calendar }}
