--- a/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
@@ -1,5 +1,8 @@
 {% block content %}
-
+{%  include './navbar.html' %}
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
 {% if user.is_authenticated %}
 <h1> Add a post here...</h1>
 
