--- a/food_redistribution/cal/templates/cal/calnav.html
+++ b/food_redistribution/cal/templates/cal/calnav.html
@@ -31,6 +31,13 @@
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'add-post' %}">Add a post</a>
       </li>
+      <li class="nav-item active">
+        <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'yelp_search:search_restaurants' %}">
+        	{% csrf_token %}
+        <input class="form-control mr-sm-2" type="search" placeholder="Search Location" name = "searched" required="required">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </li>
     </ul>
   </div>
 
