--- a/food_redistribution/yelp_search/templates/yelp_search/detail.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/detail.html
@@ -1,11 +1,11 @@
-{% extends 'templates/base.html' %}
+{% extends 'yelp_search/base.html' %}
 {% block home %}
 <a class="navbar-brand" href="/naturescall">Naturescall</a>
 {% endblock %}
 
 
 {% block form %}
-<form class="form-inline my-2 my-lg-0" method="POST" action= "/naturescall/search_restroom/">
+<form class="form-inline my-2 my-lg-0" method="POST" action= "search_restaurants/">
   {% csrf_token %}
 <input class="form-control mr-sm-2" type="search" placeholder="Search Location" name = "searched" required="required">
 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
