added photo posting feature and fixed automatic author detection for posts+wrote a simple test case

--- a/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
@@ -9,7 +9,14 @@
 </small><br/>
 <hr>
 <br/>
-{{post.body}}
+<p>
+    {{post.body}}
+</p>
+<p>
+    {% if post.pic %}
+        <img src="{{ post.pic.url }}" style="width:400px;height:300px;" >
+    {% endif %}
+</p>
 
 <br/><br/>
 <a href="{% url 'posts' %}">Go Back</a>
