--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -53,7 +53,7 @@
               <div class="px-4 py-3">
                   <h5 class="mb-0">About</h5>
                   <div class="p-4 rounded shadow-sm bg-light">
-                      <p class="font-italic mb-0">Restaurant</p>
+                      <p class="font-italic mb-0">{{user.get_username}}</p>
                       <p class="font-italic mb-0">1234 Apple Ave, Brooklyn, NY</p>
                       <p class="font-italic mb-0">Tasty apple pies!</p>
                   </div>
