--- a/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/addpost.html
@@ -6,7 +6,7 @@
 {% if user.is_authenticated %}
 <h1> Add a post here...</h1>
 
-<form method = "POST">
+<form method = "POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p}}
     <button> Post!</button>
