--- a/food_redistribution/yelp_search/templates/yelp_search/search.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/search.html
@@ -13,28 +13,32 @@
 {% endblock %}
 
 {% block content %}
-
-    <div class="container-fluid">
-
+    <div class="row">
       {% if data %}
         {% for d in data%}
-        <div class="card" style="width: 30rem;">
-          <img class="card-img-top" src={{d.image_url}} alt="Card image cap" style= "width:100%; height:15vw; object-fit: cover;">
-          <div class="card-body">
-            <h5 class="card-title">{{d.name}}</h5>
-            <p class="card-text">{{d.addr}}</p>
-            <p class="card-text" style="color:DodgerBlue;">{{d.distance}} meters away</p>
-            <!--{% if d.db_id %}
-              <p class="card-text">our rating: {{d.our_rating}}</p>
-              <a href="{% url 'yelp_search:restroom_detail' d.db_id %}" class="btn btn-success">Show Details</a>
-            {% else %}
-
-            {% endif %}-->
+      <div class="column">
+        <div class="container h-100">
+          <div class="d-flex justify-content-center h-100">
+            <div class="user_card">
+              <div class="d-flex justify-content-center">
+                <div class="card border-light" style="width: 100%; height=90%;">
+                  <img class="card-img-top" src={{d.image_url}} alt="Card image cap" style= "width:100%; height:9vw; object-fit: cover;">
+                  <div class="card-body">
+                    <h5 class="card-title">{{d.name}}</h5>
+                    <p class="card-text">Phone: {{d.display_phone}}</p>
+                    <!--<p class="card-text">{{d.categories.title}}</p>-->
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
-        {% endfor %}
-        {% else %}
-            <h3>Location Not Found</h3>
-        {% endif %}
-    </div>
+      </div>
+    {% endfor %}
+  {% else %}
+    <h3>Location Not Found</h3>
+  {% endif %}
+  </div>
+
+
 {% endblock %}
