--- a/food_redistribution/accounts/templates/accounts/landing_page.html
+++ b/food_redistribution/accounts/templates/accounts/landing_page.html
@@ -7,9 +7,9 @@
   <!-- Material Design stylesheets -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="{% static 'accounts/css/landing-page.css' %}">
+  <link rel="stylesheet" href="{% static 'accounts/css/landing-page.css' %}"/>
   <!--<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">-->
-  <link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}">
+  <link rel="stylesheet" href="{% static 'accounts/css/material.min.css' %}"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Zen+Kurenaido&display=swap" rel="stylesheet">
