--- a/food_redistribution/cal/templates/cal/delete_event.html
+++ b/food_redistribution/cal/templates/cal/delete_event.html
@@ -13,8 +13,8 @@ Event
         <br/>
         <form method = "POST">
             {% csrf_token %}
-            <strong>Are you sure you want to remove this post?</strong><br/><br/>
-            <button> Delete Post!</button>
+            <strong>Are you sure you want to remove this event?</strong><br/><br/>
+            <button> Delete Event!</button>
         </form>
         
 </body>
