--- a/food_redistribution/accounts/templates/accounts/profile-card.html
+++ b/food_redistribution/accounts/templates/accounts/profile-card.html
@@ -68,7 +68,82 @@
 
 
 			<div class="split right">
+				<div class="mdl-grid">
+					<div class="mdl-cell mdl-cell--1-col">
+					</div>
+				  <div class="mdl-cell mdl-cell--4-col">
+						<div class="prof-card-image mdl-card mdl-shadow--2dp" style="background: url('https://images.unsplash.com/photo-1484980972926-edee96e0960d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80') center / cover;">
+						  <div class="mdl-card__title mdl-card--expand"></div>
+						  <div class="mdl-card__actions">
+						    <span class="demo-card-image__filename">Delicious!</span>
+						  </div>
+						</div>
+						<div class="spacer">
+						</div>
+						<div class="prof-card-image mdl-card mdl-shadow--2dp" style="background: url('https://images.unsplash.com/photo-1581954548218-415cd6ee5f4d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=464&q=80') center / cover;">
+						  <div class="mdl-card__title mdl-card--expand"></div>
+						  <div class="mdl-card__actions">
+						    <span class="demo-card-image__filename">Looks tasty!</span>
+						  </div>
+						</div>
+						<div class="spacer">
+						</div>
+						<div class="prof-card-image mdl-card mdl-shadow--2dp" style="background: url('https://images.unsplash.com/photo-1601118964938-228a89955311?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80') center / cover;">
+						  <div class="mdl-card__title mdl-card--expand"></div>
+						  <div class="mdl-card__actions">
+						    <span class="demo-card-image__filename">Mmmm!</span>
+						  </div>
+						</div>
+				  </div>
+					<div class="mdl-cell mdl-cell--2-col">
+					</div>
+				  <div class="mdl-cell mdl-cell--4-col">
+						<div class="offset">
+						</div>
+						<div class="prof-card-image mdl-card mdl-shadow--2dp" style="background: url('https://images.unsplash.com/photo-1563881188152-d874ad4dc3be?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80') center / cover;">
+						  <div class="mdl-card__title mdl-card--expand"></div>
+						  <div class="mdl-card__actions">
+						    <span class="demo-card-image__filename">Yum!</span>
+						  </div>
+						</div>
+						<div class="spacer">
+						</div>
+						<div class="prof-card-image mdl-card mdl-shadow--2dp" style="background: url('https://images.unsplash.com/photo-1597667079555-78f5c6a05d2b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=387&q=80') center / cover;">
+						  <div class="mdl-card__title mdl-card--expand"></div>
+						  <div class="mdl-card__actions">
+						    <span class="demo-card-image__filename">Great!</span>
+						  </div>
+						</div>
+				  </div>
+				</div>
+				<!-- Image card
+				<div class="demo-card-image mdl-card mdl-shadow--2dp">
+				  <div class="mdl-card__title mdl-card--expand"></div>
+				  <div class="mdl-card__actions">
+				    <span class="demo-card-image__filename">First</span>
+				  </div>
+				</div>
 
+				<div class="demo-card-image mdl-card mdl-shadow--2dp">
+				  <div class="mdl-card__title mdl-card--expand"></div>
+				  <div class="mdl-card__actions">
+				    <span class="demo-card-image__filename">Second</span>
+				  </div>
+				</div>
+
+				<div class="demo-card-image mdl-card mdl-shadow--2dp">
+				  <div class="mdl-card__title mdl-card--expand"></div>
+				  <div class="mdl-card__actions">
+				    <span class="demo-card-image__filename">Third</span>
+				  </div>
+				</div>
+
+				<div class="demo-card-image mdl-card mdl-shadow--2dp">
+				  <div class="mdl-card__title mdl-card--expand"></div>
+				  <div class="mdl-card__actions">
+				    <span class="demo-card-image__filename">Fourth</span>
+				  </div>
+				</div>-->
 			</div>
 
 <!-- Old profile card
