--- a/food_redistribution/accounts/static/accounts/css/profile.css
+++ b/food_redistribution/accounts/static/accounts/css/profile.css
@@ -38,7 +38,7 @@ body {
 .about-card.mdl-card {
   justify-content: center;
   width: 35vw;
-  height: 75vh;
+  height: 78vh;
   background-color: rgba(255,255,255,0.92);
 }
 
@@ -54,6 +54,10 @@ body {
   padding-left: 8%;
   padding-top: 0;
   line-height: 10px;
+}
+
+.update-prof-btn.mdl-card__actions {
+  padding-left: 4%;
 }
 
 .offset {
