--- a/food_redistribution/accounts/templates/accounts/chooselogin.html
+++ b/food_redistribution/accounts/templates/accounts/chooselogin.html
@@ -32,7 +32,7 @@
           Our organization takes donations, hosts events, and provides free meals.
         </div>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'login2' %}">
+          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login2' %}">
             Login
           </a>
         </div>
@@ -46,7 +46,7 @@
           Our organization has excess food to donate that would otherwise go to waste.
         </div>
         <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'login' %}">
+          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect" href="{% url 'accounts:login' %}">
             Login
           </a>
         </div>
