--- a/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
+++ b/food_redistribution/accounts/templates/accounts/food_redistributor_register.html
@@ -83,7 +83,7 @@
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Existing Account? <a href="{% url 'login2' %}" class="ml-2">Log In</a>
+						Existing Account? <a href="{% url 'accounts:login2' %}" class="ml-2">Log In</a>
 					</div>
 				</div>
 			</div>
