--- a/food_redistribution/accounts/templates/accounts/foodredislogin.html
+++ b/food_redistribution/accounts/templates/accounts/foodredislogin.html
@@ -54,10 +54,10 @@
 					</div>
 					</div> <!-- user-pass-form -->
 					<div class="reset-pass">
-						<p>Forgot your password? <a href="{% url 'reset_password' %}">Reset your password.</a></p>
+						<p>Forgot your password? <a href="{% url 'accounts:reset_password' %}">Reset your password.</a></p>
 					</div>
 					<div class="new-user">
-						<p>New user? <a href="{% url 'register2' %}">Create an account.</a></p>
+						<p>New user? <a href="{% url 'accounts:register2' %}">Create an account.</a></p>
 					</div>
 				</div>
 			</div>
