--- a/food_redistribution/accounts/templates/accounts/login.html
+++ b/food_redistribution/accounts/templates/accounts/login.html
@@ -51,7 +51,7 @@
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Don't Have An Account? <a href="{% url 'register' %}" class="ml-2">Register</a>
+						Don't Have An Account? <a href="{% url 'accounts:register' %}" class="ml-2">Register</a>
 					</div>
 
 				</div>
