--- a/food_redistribution/accounts/templates/accounts/restuarant_register.html
+++ b/food_redistribution/accounts/templates/accounts/restuarant_register.html
@@ -78,7 +78,7 @@
 
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-						Already Registered? <a href="{% url 'login' %}" class="ml-2">Log In</a>
+						Already Registered? <a href="{% url 'accounts:login' %}" class="ml-2">Log In</a>
 					</div>
 				</div>
 			</div>
