--- a/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
+++ b/food_redistribution/accounts/templates/accounts/blogposts/detailedblog.html
@@ -3,8 +3,8 @@
 <h1>{{ post.title }}</h1>
 <small> By:{{post.author}}
     {% if user.id == post.author.id %}
--   <a href = "{% url 'update_post' post.pk %}">(Edit)</a>
-    <a href = "{% url 'delete_post' post.pk %}">(Delete)</a>
+-   <a href = "{% url 'accounts:update_post' post.pk %}">(Edit)</a>
+    <a href = "{% url 'accounts:delete_post' post.pk %}">(Delete)</a>
     {% endif %}
 </small><br/>
 <hr>
@@ -19,7 +19,7 @@
 </p>
 
 <br/><br/>
-<a href="{% url 'posts' %}">Go Back</a>
+<a href="{% url 'accounts:posts' %}">Go Back</a>
 {% else %}
 
     Please login to access this page!
