--- a/food_redistribution/accounts/templates/accounts/restuarantlogin.html
+++ b/food_redistribution/accounts/templates/accounts/restuarantlogin.html
@@ -55,71 +55,16 @@
 					</div>
 					</div> <!-- user-pass-form -->
 					<div class="reset-pass">
-						<p>Forgot your password? <a href="{% url 'reset_password' %}">Reset your password.</a></p>
+						<p>Forgot your password? <a href="{% url 'accounts:reset_password' %}">Reset your password.</a></p>
 					</div>
 					<div class="new-user">
-						<p>New user? <a href="{% url 'register' %}">Create an account.</a></p>
+						<p>New user? <a href="{% url 'accounts:register' %}">Create an account.</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 
-
-
-	<!-- Old login page
-	<div class="container h-100">
-		<div class="d-flex justify-content-center h-100">
-			<div class="user_card">
-				<div class="d-flex justify-content-center">
-
-
-					<h3 style="font-family:Optima;font-size:35px;"><id="form-title"> Restuarant Log In</h3>
-				</div>
-				<div class="d-flex justify-content-center form_container">
-					<form method="POST" action="">
-						{% csrf_token %}
-						<div class="input-group mb-3">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-user"></i></span>
-							</div>
-
-							<input type="text" name="username" placeholder="Username..." class="form-control">
-						</div>
-
-						<div class="input-group mb-2">
-							<div class="input-group-append">
-								<span class="input-group-text"><i class="fas fa-key"></i></span>
-							</div>
-
-								<input type="password" name="password" placeholder="Password..." class="form-control" >
-						</div>
-
-							<div class="d-flex justify-content-center mt-3 login_container">
-				 				<input class="btn login_btn" type="submit" value="Sign In">
-				   			</div>
-					</form>
-
-				</div>
-
-				{% for message in messages %}
-					<p id="messages">{{message}}</p>
-				{% endfor %}
-
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Don't Have An Account? <a href="{% url 'register' %}" class="ml-2">Register</a>
-					</div>
-				</div>
-
-				<div class="mt-4">
-					<div class="d-flex justify-content-center links">
-						Forgot your Password? <a href="{% url 'reset_password' %}" class="ml-2">Click here to reset!</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-</body>
+	</body>
 
 </html>
