--- a/food_redistribution/yelp_search/templates/yelp_search/searchnav.html
+++ b/food_redistribution/yelp_search/templates/yelp_search/searchnav.html
@@ -17,19 +17,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' %}">Dashboard</a>
+        <a class="nav-link" href="{% url 'accounts:home' %}">Dashboard</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+        <a class="nav-link" href="{% url 'accounts:profile' %}">Profile</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'posts' %}">View posts</a>
+        <a class="nav-link" href="{% url 'accounts:posts' %}">View posts</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'cal:calendar' %}">View Calendar</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'add-post' %}">Add a post</a>
+        <a class="nav-link" href="{% url 'accounts:add-post' %}">Add a post</a>
       </li>
       <li class="nav-item active">
         <form class="form-inline my-2 my-lg-0" method="POST">
@@ -42,6 +42,6 @@
   </div>
 
   <span class="hello-msg">Welcome, {{request.user}}</span>
-  <span ><a  class="hello-msg" href="{% url 'logout' %}">Logout</a></span>
+  <span ><a  class="hello-msg" href="{% url 'accounts:logout' %}">Logout</a></span>
 
 </nav>
