--- a/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
+++ b/food_redistribution/food_avail/templates/food_avail/post_food_avail.html
@@ -25,6 +25,11 @@
             <button type="submit">Post Availability</button>
             <br>
         </form>
+
+        <div class="error-message">
+            {% for message in messages %}
+                <p id="messages">{{message}}</p>
+            {% endfor %}
     </main>
     {% endblock %}
     
